Fix the CSS so the scroll view won't allow text to flow off screen to break the hover features.

--- a/src/components/common/ChannelChat/ScrollDiv/scrolldiv.module.scss
+++ b/src/components/common/ChannelChat/ScrollDiv/scrolldiv.module.scss
@@ -21,6 +21,7 @@
   -ms-overflow-style: none;
   position: relative;
   display: flex;
+  max-width: calc(100vw - 300px);
   flex-flow: column nowrap;
 }
 
